--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
     <version>5.2.2</version>
 </dependency>
 <dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version> <!-- Check for the latest version -->
+</dependency>
+
+		<dependency>
     <groupId>org.mapstruct</groupId>
     <artifactId>mapstruct</artifactId>
     <version>1.5.2.Final</version>
@@ -140,7 +146,9 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
+
 
 </project>
