--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+<dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-dialogflow</artifactId>
+    <version>3.0.0</version>
+</dependency>
+<dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-storage</artifactId>
+    <version>2.15.0</version>
+</dependency>
 
 <dependency>
     <groupId>javax.servlet</groupId>
