--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>23</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -141,6 +141,11 @@
     <version>1.5.2.Final</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-devtools</artifactId>
+    <optional>true</optional>
+</dependency>
 
 </dependencies>
 
@@ -151,8 +156,8 @@
     <artifactId>maven-compiler-plugin</artifactId>
 
     <configuration>
-        <source>21</source> <!-- Your Java version -->
-        <target>21</target>
+        <source>23</source> <!-- Your Java version -->
+        <target>23</target>
         <annotationProcessorPaths>
             <path>
                 <groupId>org.mapstruct</groupId>
